Enable background parallaxing
Added custom background parallaxing. This is different from parallaxing prefabs

--- a/Coco/Assembly-CSharp.csproj
+++ b/Coco/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\BackgroundScroll.cs" />
     <Compile Include="Assets\Scripts\CountdownText.cs" />
     <Compile Include="Assets\Scripts\CurrentScore.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
