Add 4-directional control to player

--- a/Coco/Assembly-CSharp.csproj
+++ b/Coco/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Scripts\BackgroundScroll.cs" />
     <Compile Include="Assets\Scripts\CountdownText.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\JoystickController.cs" />
     <Compile Include="Assets\Scripts\Parallaxer.cs" />
     <Compile Include="Assets\Scripts\PlayerHealth.cs" />
     <Compile Include="Assets\Scripts\RandomPath.cs" />
